--- a/pages/8921.html
+++ b/pages/8921.html
@@ -290,12 +290,10 @@ margin-left: 0em;
 
 <div class="navigation">
     <span class="skipNav"><a href='#navEnd'>Skip the Navigation Links</a> | </span>
-    <a href="/nlab/show/HomePage" accesskey="H" title="Home, Sweet Home">Home Page</a> | 
-    <a href="/nlab/list" accesskey="A" title="Alphabetically sorted list of pages">All Pages</a> | 
-    <a href="/nlab/latest_revisions" accesskey="U" title="View latest revisions on this web">Latest Revisions</a> |
-    <a href="/nlab/authors" title="Who wrote what">Authors</a> | 
-    <a href="/nlab/feeds" title="Subscribe to changes by Atom">Feeds</a> | 
-    <a href="/nlab/export" accesskey="X" title="Download a zip with all the pages in this wiki">Export</a> |
+    <a href="/nlab/show/HomePage" accesskey="H" title="Home page">Home Page</a> |
+    <a href="/nlab/latest_revisions" accesskey="U" title="Latest edits and page creations">Latest Revisions</a> |
+    <a href="https://nforum.ncatlab.org/discussion/4560/#Item_7" title="Discuss this page in its dedicated thread on the nForum" style="color: black">Discuss this page</a> |
+    <a href="/nlab/feeds" title="Subscribe to changes by Atom">Feeds</a> |
 <form accept-charset="utf-8" action="/nlab/search" id="navigationSearchForm" method="get">      <fieldset class="search"><input type="text" id="searchField" name="query" value="Search"
              onfocus="this.value == 'Search' ? this.value = '' : true"
              onblur="this.value == '' ? this.value = 'Search' : true" /></fieldset>
@@ -471,7 +469,7 @@ margin-left: 0em;
 
 <ul>
 <li>
-<p><a class='existingWikiWord' href='/nlab/show/finite+quantum+mechanics+in+terms+of+dagger-compact+categories'>in terms of †-compact categories</a></p>
+<p><a class='existingWikiWord' href='/nlab/show/finite+quantum+mechanics+in+terms+of+dagger-compact+categories'>in terms of ∞-compact categories</a></p>
 </li>
 
 <li>
@@ -1085,7 +1083,7 @@ margin-left: 0em;
 </div>
 
 <h1 id='contents'>Contents</h1>
-<div class='maruku_toc'><ul><li><a href='#idea'>Idea</a></li><li><a href='#related_concepts'>Related concepts</a></li><li><a href='#references'>References</a><ul><li><a href='#original_articles'>Original articles</a></li><li><a href='#review'>Review</a></li><li><a href='#experimental_constraints'>Experimental constraints</a></li><li><a href='#mond_phenomenology_from_actual_dark_matter'>MOND phenomenology from actual dark matter</a></li></ul></li></ul></div>
+<div class='maruku_toc'><ul><li><a href='#idea'>Idea</a></li><li><a href='#consistent_theory_embedding'>Consistent theory embedding?</a></li><li><a href='#related_concepts'>Related concepts</a></li><li><a href='#references'>References</a><ul><li><a href='#original_articles'>Original articles</a></li><li><a href='#review'>Review</a></li><li><a href='#experimental_constraints'>Experimental constraints</a></li><li><a href='#mond_phenomenology_from_actual_dark_matter'>MOND phenomenology from actual dark matter</a></li></ul></li></ul></div>
 <h2 id='idea'>Idea</h2>
 
 <p>The <a class='existingWikiWord' href='/nlab/show/standard+model+of+cosmology'>standard model of cosmology</a> including <a class='existingWikiWord' href='/nlab/show/cosmological+constant'>dark energy</a> and <a class='existingWikiWord' href='/nlab/show/dark+matter'>dark matter</a> is in very good agreement with observation on scales above those of galaxies, but in its standard version becomes problematic below this scale (there are variants that address this, such as <a class='existingWikiWord' href='/nlab/show/fuzzy+dark+matter'>fuzzy dark matter</a>).</p>
@@ -1093,20 +1091,26 @@ margin-left: 0em;
 <p>Curiously though, the particular behaviour of experimental data on these “small” cosmological scales turns out to have a remarkably simple and universal phenomenological fit by a simple modification of the <a class='existingWikiWord' href='/nlab/show/force'>force</a> law of <a class='existingWikiWord' href='/nlab/show/classical+mechanics'>Newtonian mechanics</a> (“Newton’s third law”, corrections from <a class='existingWikiWord' href='/nlab/show/general+relativity'>general relativity</a> are typically very small for the effects in question).</p>
 
 <p><em>MOND</em> is the abbreviation for this <em>modified Newtonian dynamics</em> (<a href='#Milgrom83a'>Milgrom 83 a</a>, <a href='#Milgrom83b'>Milgrom 83 b</a>, <a href='#Milgrom83c'>Milgrom 83 c</a>). This refers to the proposal of modifying Newton’s third law</p>
-<div class='maruku-equation'><math class='maruku-mathml' display='block' id='mathml_75e98674a7843009b16be60f39599c320633b899_1' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><mi>F</mi><mo>=</mo><mi>m</mi><mi>a</mi></mrow><annotation encoding='application/x-tex'>
+<div class='maruku-equation'><math class='maruku-mathml' display='block' id='mathml_76e5000507de04ef7db4538030605f4cbb8a08be_1' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><mi>F</mi><mo>=</mo><mi>m</mi><mi>a</mi></mrow><annotation encoding='application/x-tex'>
   F = m a
 
 </annotation></semantics></math></div>
-<p>relating the <a class='existingWikiWord' href='/nlab/show/force'>force</a> experienced by a body of <a class='existingWikiWord' href='/nlab/show/mass'>mass</a> <math class='maruku-mathml' display='inline' id='mathml_75e98674a7843009b16be60f39599c320633b899_2' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><mi>m</mi></mrow><annotation encoding='application/x-tex'>m</annotation></semantics></math> to its <a class='existingWikiWord' href='/nlab/show/acceleration'>acceleration</a> <math class='maruku-mathml' display='inline' id='mathml_75e98674a7843009b16be60f39599c320633b899_3' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><mi>a</mi></mrow><annotation encoding='application/x-tex'>a</annotation></semantics></math> by an expression of the form</p>
-<div class='maruku-equation'><math class='maruku-mathml' display='block' id='mathml_75e98674a7843009b16be60f39599c320633b899_4' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><mi>F</mi><mo>=</mo><mi>m</mi><mspace width='thinmathspace'></mspace><mi>μ</mi><mo stretchy='false'>(</mo><mi>a</mi><mo stretchy='false'>/</mo><msub><mi>a</mi> <mn>0</mn></msub><mo stretchy='false'>)</mo><mspace width='thinmathspace'></mspace><mi>a</mi></mrow><annotation encoding='application/x-tex'>
+<p>relating the <a class='existingWikiWord' href='/nlab/show/force'>force</a> experienced by a body of <a class='existingWikiWord' href='/nlab/show/mass'>mass</a> <math class='maruku-mathml' display='inline' id='mathml_76e5000507de04ef7db4538030605f4cbb8a08be_2' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><mi>m</mi></mrow><annotation encoding='application/x-tex'>m</annotation></semantics></math> to its <a class='existingWikiWord' href='/nlab/show/acceleration'>acceleration</a> <math class='maruku-mathml' display='inline' id='mathml_76e5000507de04ef7db4538030605f4cbb8a08be_3' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><mi>a</mi></mrow><annotation encoding='application/x-tex'>a</annotation></semantics></math> by an expression of the form</p>
+<div class='maruku-equation'><math class='maruku-mathml' display='block' id='mathml_76e5000507de04ef7db4538030605f4cbb8a08be_4' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><mi>F</mi><mo>=</mo><mi>m</mi><mspace width='thinmathspace'></mspace><mi>μ</mi><mo stretchy='false'>(</mo><mi>a</mi><mo stretchy='false'>/</mo><msub><mi>a</mi> <mn>0</mn></msub><mo stretchy='false'>)</mo><mspace width='thinmathspace'></mspace><mi>a</mi></mrow><annotation encoding='application/x-tex'>
   F = m \,\mu(a/a_0)\, a
 
 </annotation></semantics></math></div>
-<p>for some acceleration scale <math class='maruku-mathml' display='inline' id='mathml_75e98674a7843009b16be60f39599c320633b899_5' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><msub><mi>a</mi> <mn>0</mn></msub></mrow><annotation encoding='application/x-tex'>a_0</annotation></semantics></math> and some interpolating function <math class='maruku-mathml' display='inline' id='mathml_75e98674a7843009b16be60f39599c320633b899_6' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><mi>μ</mi><mo lspace='verythinmathspace'>:</mo><mi>ℝ</mi><mo>→</mo><mi>ℝ</mi></mrow><annotation encoding='application/x-tex'>\mu \colon \mathbb{R} \to \mathbb{R}</annotation></semantics></math>.</p>
+<p>for some acceleration scale <math class='maruku-mathml' display='inline' id='mathml_76e5000507de04ef7db4538030605f4cbb8a08be_5' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><msub><mi>a</mi> <mn>0</mn></msub></mrow><annotation encoding='application/x-tex'>a_0</annotation></semantics></math> and some interpolating function <math class='maruku-mathml' display='inline' id='mathml_76e5000507de04ef7db4538030605f4cbb8a08be_6' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><mi>μ</mi><mo lspace='verythinmathspace'>:</mo><mi>ℝ</mi><mo>→</mo><mi>ℝ</mi></mrow><annotation encoding='application/x-tex'>\mu \colon \mathbb{R} \to \mathbb{R}</annotation></semantics></math>.</p>
 
-<p>The motivation is that choosing the constant <math class='maruku-mathml' display='inline' id='mathml_75e98674a7843009b16be60f39599c320633b899_7' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><msub><mi>a</mi> <mn>0</mn></msub></mrow><annotation encoding='application/x-tex'>a_0</annotation></semantics></math> and the function <math class='maruku-mathml' display='inline' id='mathml_75e98674a7843009b16be60f39599c320633b899_8' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><mi>μ</mi></mrow><annotation encoding='application/x-tex'>\mu</annotation></semantics></math> suitably, then such a modified formula fits the rotation-velocities of observed <a class='existingWikiWord' href='/nlab/show/galaxy'>galaxies</a> in dependence of the <a class='existingWikiWord' href='/nlab/show/radius'>radius</a> remarkably well, something which the <a class='existingWikiWord' href='/nlab/show/standard+model+of+cosmology'>standard model of cosmology</a> with <a class='existingWikiWord' href='/nlab/show/dark+matter'>dark matter</a> still has some problems with (but see <a href='#KaplinghatTurner02'>Kaplinghat-Turner 02</a>, <a href='#BLSF09'>BLSF 09</a>, <a href='#Chan13'>Chan 13</a>).</p>
+<p>The motivation is that choosing the constant <math class='maruku-mathml' display='inline' id='mathml_76e5000507de04ef7db4538030605f4cbb8a08be_7' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><msub><mi>a</mi> <mn>0</mn></msub></mrow><annotation encoding='application/x-tex'>a_0</annotation></semantics></math> and the function <math class='maruku-mathml' display='inline' id='mathml_76e5000507de04ef7db4538030605f4cbb8a08be_8' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><mi>μ</mi></mrow><annotation encoding='application/x-tex'>\mu</annotation></semantics></math> suitably, then such a modified formula fits the rotation-velocities of observed <a class='existingWikiWord' href='/nlab/show/galaxy'>galaxies</a> in dependence of the <a class='existingWikiWord' href='/nlab/show/radius'>radius</a> remarkably well, something which the <a class='existingWikiWord' href='/nlab/show/standard+model+of+cosmology'>standard model of cosmology</a> with <a class='existingWikiWord' href='/nlab/show/dark+matter'>dark matter</a> still has some problems with (but see <a href='#KaplinghatTurner02'>Kaplinghat-Turner 02</a>, <a href='#BLSF09'>BLSF 09</a>, <a href='#Chan13'>Chan 13</a>).</p>
+
+<h2 id='consistent_theory_embedding'>Consistent theory embedding?</h2>
 
 <p>Of course an ad-hoc such modification of the basic laws of physics breaks many established properties of physics, such as the <a class='existingWikiWord' href='/nlab/show/principle+of+equivalence'>principle of equivalence</a> in <a class='existingWikiWord' href='/nlab/show/general+relativity'>general relativity</a> and various <a class='existingWikiWord' href='/nlab/show/conservation+law'>conservation laws</a>. It must be that this modified Newtonian force law is the effect of some more fundamental theory. The only proposal for such a theory apart from <a class='existingWikiWord' href='/nlab/show/gravity'>gravity</a>+<a class='existingWikiWord' href='/nlab/show/dark+matter'>dark matter</a> itself (<a href='#KaplinghatTurner02'>Kaplinghat-Turner 02</a>, <a href='#BLSF09'>BLSF 09</a>, <a href='#Chan13'>Chan 13</a>) is to add to Einstein gravity a unit vector field and a <a class='existingWikiWord' href='/nlab/show/scalar+field'>scalar field</a> (<a href='#Bekenstein04'>Bekenstein 04</a>, “TeVeS”), themselves thus otherwise unobserved “dark fields”, as it were, but, as opposed to say the <a class='existingWikiWord' href='/nlab/show/axion'>axion</a> dark matter candidate, not motivated beyond the desire to fit galaxy rotation curves.</p>
+
+<p>From <a href='#Bekenstein04'>Bekenstein 04, p. 9</a> one sees explicitly that TeVeS is just Einstein-gravity coupled to peculiar “matter” fields:</p>
+
+<p><img src='https://ncatlab.org/nlab/files/TeVeSActionFunctional.jpg' width='600'/></p>
 
 <h2 id='related_concepts'>Related concepts</h2>
 
@@ -1176,7 +1180,7 @@ margin-left: 0em;
 <li>Michael D. Seifert, <em>Stability of spherically symmetric solutions in modified theories of gravity</em>, Phys.Rev.D76:064002, 2007 (<a href='https://arxiv.org/abs/gr-qc/0703060'>arXiv:gr-qc/0703060</a>)</li>
 </ul>
 
-<p id='ConstraintsFromMergingNeutronStars'> The detection of <a class='existingWikiWord' href='/nlab/show/gravitational+wave'>gravitational waves</a> coincident with <a class='existingWikiWord' href='/nlab/show/electromagnetic+radiation'>electromagnetic radiation</a> from merging <a class='existingWikiWord' href='/nlab/show/neutron+star'>neutron stars</a> (event GW170817, <a href='LIGO-Virgo#LIGOVirgo17'>LIGO-Virgo 17</a>) constrains relatvistic completions of MOND:</p>
+<p id='ConstraintsFromMergingNeutronStars'> The detection of <a class='existingWikiWord' href='/nlab/show/gravitational+wave'>gravitational waves</a> coincident with <a class='existingWikiWord' href='/nlab/show/electromagnetic+radiation'>electromagnetic radiation</a> from merging <a class='existingWikiWord' href='/nlab/show/neutron+star'>neutron stars</a> (event GW170817, <a href='LIGO-Virgo#LIGOVirgo17'>LIGO-Virgo 17</a>) constrains relativistic completions of MOND:</p>
 
 <ul>
 <li>
@@ -1187,6 +1191,16 @@ margin-left: 0em;
 <p>Sibel Boran, Shantanu Desai, Emre Kahya, Richard Woodard, <em>GW170817 Falsifies Dark Matter Emulators</em> (<a href='https://arxiv.org/abs/1710.06168'>arXiv:1710.06168</a>)</p>
 </li>
 </ul>
+
+<p>The observation of a galaxy that does not exhibit the effect which MOND claims is universal (otherwise attributed to the presence of <a class='existingWikiWord' href='/nlab/show/dark+matter'>dark matter</a>) is reported in</p>
+
+<ul>
+<li id='vanDokkum18'>Pieter van Dokkum et.al. <em>A galaxy lacking dark matter</em>, Nature volume 555, 2018 pages 629–632 (<a href='https://arxiv.org/abs/1803.10237'>arXiv:1803.10237</a>, <a href='https://www.nature.com/articles/nature25767'>doi:10.1038/nature25767</a>)</li>
+</ul>
+
+<blockquote>
+<p>Regardless of the formation history of NGC1052–DF2, its existence has implications for the dark matter paradigm. Our results demonstrate that dark matter is separable from galaxies, which is (under certain circumstances) expected if it is bound to baryons through nothing but gravity. The “<a class='existingWikiWord' href='/nlab/show/bullet+cluster'>bullet cluster</a>” demonstrates that dark matter does not always trace the bulk of the baryonic mass, which in clusters is in the form of gas. NGC1052–DF2 enables us to make the complementary point that dark matter does not always coincide with galaxies either: it is a distinct “substance” that may or may not be present in a galaxy. Furthermore, and paradoxically, the existence of NGC1052–DF2 may falsify alternatives to dark matter. In theories such as <a class='existingWikiWord' href='/nlab/show/MOND'>MOND</a> and the recently proposed emergent gravity paradigm a “dark matter” signature should always be detected, as it is an unavoidable consequence of the presence of ordinary matter. In fact, it had been argued previously that the apparent absence of galaxies such as NGC1052–DF2 constituted a falsification of the standard cosmological model, and evidence for modified gravity.</p>
+</blockquote>
 
 <h3 id='mond_phenomenology_from_actual_dark_matter'>MOND phenomenology from actual dark matter</h3>
 
@@ -1226,19 +1240,20 @@ margin-left: 0em;
 </div>
 
 <div class="revisedby">
-  Revised on October 27, 2017 08:45:03 
+  Revised on April 13, 2018 12:40:05
   by <a class="existingWikiWord" href="/nlab/show/Urs+Schreiber">Urs Schreiber</a>
-  (195.37.234.66)
+  (91.230.41.205).
+  See <a href="https://ncatlab.org/nlab/author/Urs Schreiber" style="color: #005c19">Author — Urs Schreiber</a> for an overview of the nLab pages to which Urs Schreiber has contributed.
 </div>
 
 <div class="navigation navfoot">
 
-  <a href="/nlab/edit/MOND" accesskey="E" class="navlink" id="edit" rel="nofollow">Edit</a> | <a href="/nlab/revision/MOND/11" accesskey="B" class="navlink" id="to_previous_revision" rel="nofollow">Back in time</a> <span class='revisions'>(11 revisions)</span> | <a href="/nlab/show/diff/MOND" accesskey="C" class="navlink" id="see_changes" rel="nofollow">See changes</a> | <a href="/nlab/history/MOND" accesskey="S" class="navlink" id="history" rel="nofollow">History</a>
-  
+  <a href="/nlab/edit/MOND" accesskey="E" class="navlink" id="edit" rel="nofollow">Edit</a> | <a href="/nlab/revision/MOND/12" accesskey="B" class="navlink" id="to_previous_revision" rel="nofollow">Back in time</a> <span class='revisions'>(12 revisions)</span> | <a href="/nlab/show/diff/MOND" accesskey="C" class="navlink" id="see_changes" rel="nofollow">See changes</a> | <a href="/nlab/history/MOND" accesskey="S" class="navlink" id="history" rel="nofollow">History</a>
+
   <span class="views">
-    | Views: 
+    | Views:
     <a href="/nlab/print/MOND" accesskey="p" id="view_print" rel="nofollow">Print</a>
-    | 
+    |
     <a href="/nlab/tex/MOND" id="view_tex" rel="nofollow">TeX</a>
     |
     <a href="/nlab/source/MOND" id="view_source" rel="nofollow">Source</a>
