--- a/pages/11453.html
+++ b/pages/11453.html
@@ -257,8 +257,8 @@ margin-left: 0em;
     //--><!]]>
   </script>
 
-  	<link href="https://ncatlab.org/nlab/atom_with_headlines" rel="alternate" title="Atom with headlines" type="application/atom+xml" />
-  	<link href="https://ncatlab.org/nlab/atom_with_content" rel="alternate" title="Atom with full content" type="application/atom+xml" />
+  	<link href="http://nlab-local/nlab/atom_with_headlines" rel="alternate" title="Atom with headlines" type="application/atom+xml" />
+  	<link href="http://nlab-local/nlab/atom_with_content" rel="alternate" title="Atom with full content" type="application/atom+xml" />
   <script type="text/javascript">
   document.observe("dom:loaded", function() {
     generateThmNumbers();
@@ -577,10 +577,10 @@ margin-left: 0em;
 </div>
 
 <h1 id='contents'>Contents</h1>
-<div class='maruku_toc'><ul><li><a href='#idea'>Idea</a></li><li><a href='#properties'>Properties</a><ul><li><a href='#TDualityWithTypeIStringTheory'>T-Duality with type I string theory</a></li></ul></li><li><a href='#related_concepts'>Related concepts</a></li><li><a href='#references'>References</a></li></ul></div>
+<div class='maruku_toc'><ul><li><a href='#idea'>Idea</a></li><li><a href='#properties'>Properties</a><ul><li><a href='#TDualityWithTypeIStringTheory'>T-Duality with type I string theory</a></li><li><a href='#duality_with_mtheory'>Duality with M-Theory</a></li><li><a href='#fractional_branes_at_oplanes'>Fractional branes at O-planes</a></li></ul></li><li><a href='#related_concepts'>Related concepts</a></li><li><a href='#references'>References</a></li></ul></div>
 <h2 id='idea'>Idea</h2>
 
-<p>In <a class='existingWikiWord' href='/nlab/show/type+II+string+theory'>type II string theory</a> on <a class='existingWikiWord' href='/nlab/show/orientifold'>orientifolds</a>, one says <em>O-plane</em> for the <a class='existingWikiWord' href='/nlab/show/fixed+point'>fixed point</a> locus of the <math class='maruku-mathml' display='inline' id='mathml_5e8a04ab185cccbdb43639bb337b647ec4a7a0ae_1' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><msub><mi>ℤ</mi> <mn>2</mn></msub></mrow><annotation encoding='application/x-tex'>\mathbb{Z}_2</annotation></semantics></math>-<a class='existingWikiWord' href='/nlab/show/involution'>involution</a> (see at <em><a class='existingWikiWord' href='/nlab/show/real+space'>real space</a></em>).</p>
+<p>In <a class='existingWikiWord' href='/nlab/show/type+II+string+theory'>type II string theory</a> on <a class='existingWikiWord' href='/nlab/show/orientifold'>orientifolds</a>, one says <em>O-plane</em> for the <a class='existingWikiWord' href='/nlab/show/fixed+point'>fixed point</a> locus of the <math class='maruku-mathml' display='inline' id='mathml_ea20a9d66df34c1926af336173acd8e17a6f8ec0_1' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><msub><mi>ℤ</mi> <mn>2</mn></msub></mrow><annotation encoding='application/x-tex'>\mathbb{Z}_2</annotation></semantics></math>-<a class='existingWikiWord' href='/nlab/show/involution'>involution</a> (see at <em><a class='existingWikiWord' href='/nlab/show/real+space'>real space</a></em>).</p>
 
 <p>O-planes carry <a class='existingWikiWord' href='/nlab/show/D-brane'>D-brane charges</a> in <a class='existingWikiWord' href='/nlab/show/KR+cohomology+theory'>KR-theory</a> (<a href='#Witten98'>Witten 98</a>), see (<a href='#DMR13'>DMR 13</a>) for a mathematical account. They serve <a class='existingWikiWord' href='/nlab/show/RR-field+tadpole+cancellation'>RR-field tadpole cancellation</a> and as such play a key role in the construction of <a class='existingWikiWord' href='/nlab/show/intersecting+D-brane+model'>intersecting D-brane models</a> for <a class='existingWikiWord' href='/nlab/show/string+phenomenology'>string phenomenology</a>.</p>
 
@@ -591,6 +591,62 @@ margin-left: 0em;
 <p>Under <a class='existingWikiWord' href='/nlab/show/T-duality'>T-duality</a> <a class='existingWikiWord' href='/nlab/show/type+I+string+theory'>type I string theory</a> is dual to <a class='existingWikiWord' href='/nlab/show/type+II+string+theory'>type II string theory</a> with orientifold planes (reviewed e.g. in <a href='#IbanezUranga12'>Ibanez-Uranga 12, section 5.3.2</a>):</p>
 
 <p><img src='https://ncatlab.org/nlab/files/TDualityOrientifold.jpg' width='700'/></p>
+
+<h3 id='duality_with_mtheory'>Duality with M-Theory</h3>
+
+<p>Under the <a class='existingWikiWord' href='/nlab/show/duality+in+string+theory'>duality</a> between <a class='existingWikiWord' href='/nlab/show/M-theory'>M-theory</a> and <a class='existingWikiWord' href='/nlab/show/type+II+string+theory'>type IIA string theory</a> the O8-plane is identified with the <a class='existingWikiWord' href='/nlab/show/M9-brane'>M9-brane</a> of <a class='existingWikiWord' href='/nlab/show/Ho%C5%99ava-Witten+theory'>Horava-Witten theory</a>:</p>
+
+<p><img src='https://ncatlab.org/nlab/files/O8DualToM9.jpg' width='600'/></p>
+
+<blockquote>
+<p>from <a href='#GKSTY02'>GKSTY 02, section 3</a></p>
+</blockquote>
+
+<h3 id='fractional_branes_at_oplanes'>Fractional branes at O-planes</h3>
+
+<p>By the discussion at <em><a href='NS5-brane#D6BranesEndingOnNS5Branes'>D-branes ending on NS5 branes</a><strong>, a <a class='existingWikiWord' href='/nlab/show/black+brane'>black</a> <a class='existingWikiWord' href='/nlab/show/D6-brane'>D6-brane</a> may end on a <a class='existingWikiWord' href='/nlab/show/black+brane'>black</a> <a class='existingWikiWord' href='/nlab/show/NS5-brane'>NS5-brane</a>, and in fact a priori each <a class='existingWikiWord' href='/nlab/show/black+brane'>brane</a> <a class='existingWikiWord' href='/nlab/show/NS5-brane'>NS5-brane</a> has to be the junction of two <a class='existingWikiWord' href='/nlab/show/black+brane'>black</a> <a class='existingWikiWord' href='/nlab/show/D6-brane'>D6-branes</a>.</strong></em></p>
+
+<p><img src='https://ncatlab.org/nlab/files/HalfNS5.jpg' width='650'/></p>
+
+<blockquote>
+<p>from <a href='#GKSTY02'>GKSTY 02</a></p>
+</blockquote>
+
+<p>If in addition the <a class='existingWikiWord' href='/nlab/show/black+brane'>black</a> <a class='existingWikiWord' href='/nlab/show/NS5-brane'>NS5-brane</a> sits at an <a class='existingWikiWord' href='/nlab/show/orientifold+plane'>O8-plane</a>, hence at the <a class='existingWikiWord' href='/nlab/show/orientifold'>orientifold</a> <a class='existingWikiWord' href='/nlab/show/fixed+point'>fixed point</a>-locus, then in the ordinary <math class='maruku-mathml' display='inline' id='mathml_ea20a9d66df34c1926af336173acd8e17a6f8ec0_2' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><mi>ℤ</mi><mo stretchy='false'>/</mo><mn>2</mn></mrow><annotation encoding='application/x-tex'>\mathbb{Z}/2</annotation></semantics></math>-<a class='existingWikiWord' href='/nlab/show/quotient+object'>quotient</a> it appears as a “<a class='existingWikiWord' href='/nlab/show/fractional+D-brane'>half-brane</a>” with only one copy of <a class='existingWikiWord' href='/nlab/show/D6-brane'>D6-branes</a> ending on it:</p>
+
+<p><img src='https://ncatlab.org/nlab/files/HalfNS5II.jpg' width='400'/></p>
+
+<blockquote>
+<p>from <a href='#GKSTY02'>GKSTY 02</a></p>
+</blockquote>
+
+<p>(In <a href='#HananyZaffaroni99'>Hanany-Zaffaroni 99</a> this is interpreted in terms of the <a class='existingWikiWord' href='/nlab/show/%27t+Hooft-Polyakov+monopole'>&#39;t Hooft-Polyakov monopole</a>.)</p>
+
+<p id='LiftToMTheortyOfNS5Halfbrane'> The lift to <a class='existingWikiWord' href='/nlab/show/M-theory'>M-theory</a> of this situation is an <a class='existingWikiWord' href='/nlab/show/M5-brane'>M5-brane</a> intersecting an <a class='existingWikiWord' href='/nlab/show/M9-brane'>M9-brane</a>:</p>
+
+<p><img src='https://ncatlab.org/nlab/files/M9KK6Intersection.jpg' width='650'/></p>
+
+<blockquote>
+<p>from <a href='#GKSTY02'>GKSTY 02</a></p>
+</blockquote>
+
+<p>Alternatively the <a class='existingWikiWord' href='/nlab/show/orientifold+plane'>O8-plane</a> may intersect the <a class='existingWikiWord' href='/nlab/show/black+brane'>black</a> <a class='existingWikiWord' href='/nlab/show/D6-brane'>D6-branes</a> away from the <a class='existingWikiWord' href='/nlab/show/black+brane'>black</a> <a class='existingWikiWord' href='/nlab/show/NS5-brane'>NS5-brane</a>:</p>
+
+<p><img src='https://ncatlab.org/nlab/files/D6D8Intersection.jpg' width='650'/></p>
+
+<blockquote>
+<p>from <a href='#HKLY15'>HKLY 15</a></p>
+</blockquote>
+
+<p>In general, some of the NS5 sit away from the <a class='existingWikiWord' href='/nlab/show/orientifold+plane'>O8-plane</a>, while some sit on top of it:</p>
+
+<p><img src='https://ncatlab.org/nlab/files/NS5D6O8.jpg' width='500'/></p>
+
+<blockquote>
+<p>from <a href='#HananyZaffaroni98'>Hanany-Zaffaroni 98</a></p>
+</blockquote>
+
+<p>See also at <em><a class='existingWikiWord' href='/nlab/show/intersecting+D-brane+model'>intersecting D-brane models</a></em> the section <em><a href='intersecting+D-brane+model#IntersectionOfD6WithO8'>Intersection of D6s with O8s</a></em>.</p>
 
 <h2 id='related_concepts'>Related concepts</h2>
 
@@ -631,8 +687,16 @@ margin-left: 0em;
 <p>Eric G. Gimon, <em>On the M-theory Interpretation of Orientifold Planes</em> (<a href='https://arxiv.org/abs/hep-th/9806226'>arXiv:hep-th/9806226</a>)</p>
 </li>
 
+<li id='GKSTY02'>
+<p>E. Gorbatov, V.S. Kaplunovsky, J. Sonnenschein, <a class='existingWikiWord' href='/nlab/show/Stefan+Theisen'>Stefan Theisen</a>, S. Yankielowicz, section 3 of <em>On Heterotic Orbifolds, M Theory and Type I’ Brane Engineering</em>, JHEP 0205:015, 2002 (<a href='https://arxiv.org/abs/hep-th/0108135'>arXiv:hep-th/0108135</a>)</p>
+</li>
+
 <li>
 <p><a class='existingWikiWord' href='/nlab/show/Amihay+Hanany'>Amihay Hanany</a>, Barak Kol, section 3 of <em>On Orientifolds, Discrete Torsion, Branes and M Theory</em>, JHEP 0006 (2000) 013 (<a href='https://arxiv.org/abs/hep-th/0003025'>arXiv:hep-th/0003025</a>)</p>
+</li>
+
+<li id='HKLY15'>
+<p>Hirotaka Hayashi, Sung-Soo Kim, Kimyeong Lee, Futoshi Yagi, <em>6d SCFTs, 5d Dualities and Tao Web Diagrams</em> (<a href='https://arxiv.org/abs/1509.03300'>arXiv:1509.03300</a>)</p>
 </li>
 </ul>
 
@@ -663,7 +727,7 @@ margin-left: 0em;
 </div>
 
 <div class="revisedby">
-  Revised on April 13, 2018 06:02:54
+  Revised on April 13, 2018 13:30:21
   by <a class="existingWikiWord" href="/nlab/show/Urs+Schreiber">Urs Schreiber</a>
   (91.230.41.205).
   See <a href="https://ncatlab.org/nlab/author/Urs Schreiber" style="color: #005c19">Author — Urs Schreiber</a> for an overview of the nLab pages to which Urs Schreiber has contributed.
@@ -671,7 +735,7 @@ margin-left: 0em;
 
 <div class="navigation navfoot">
 
-  <a href="/nlab/edit/orientifold+plane" accesskey="E" class="navlink" id="edit" rel="nofollow">Edit</a> | <a href="/nlab/revision/orientifold+plane/6" accesskey="B" class="navlink" id="to_previous_revision" rel="nofollow">Back in time</a> <span class='revisions'>(6 revisions)</span> | <a href="/nlab/show/diff/orientifold+plane" accesskey="C" class="navlink" id="see_changes" rel="nofollow">See changes</a> | <a href="/nlab/history/orientifold+plane" accesskey="S" class="navlink" id="history" rel="nofollow">History</a>
+  <a href="/nlab/edit/orientifold+plane" accesskey="E" class="navlink" id="edit" rel="nofollow">Edit</a> | <a href="/nlab/revision/orientifold+plane/7" accesskey="B" class="navlink" id="to_previous_revision" rel="nofollow">Back in time</a> <span class='revisions'>(7 revisions)</span> | <a href="/nlab/show/diff/orientifold+plane" accesskey="C" class="navlink" id="see_changes" rel="nofollow">See changes</a> | <a href="/nlab/history/orientifold+plane" accesskey="S" class="navlink" id="history" rel="nofollow">History</a>
 
   <span class="views">
     | Views:
